--- a/action.yml
+++ b/action.yml
@@ -1,1 +1,27 @@
-name : hello
+name : 'Generate action for readme generation and mantainace'
+description : 'Action for updating readme using actions'
+author: 'KanishkChhajed'
+branding:
+    icon: 'rss'
+    color: 'gray-dark'
+
+inputs:
+  template-path:
+    description: 'Path to template file'
+    required: false
+    default: 'Readme_template.ejs'
+  output-path:
+    description: 'Path to output readme file'
+    required: false
+    default: 'README.md'
+  environment_variable:
+    description: 'Environment variable to access github'
+    required : true
+    default: ${{secrets.GITHUB_TOKEN}}
+
+
+runs:
+  using: 'node20'
+  main: 'main.js'
+
+
