Add a trail action run using javascript actions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,3 +26,13 @@ jobs:
               run : |
                  echo "Hello World!!!"
                 #  echo $GITHUB_CONTEXT
+
+    second_job:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Install Node on image machine
+              run : npm ci 
+            - name : Initalize my build action
+              uses : ./.github/git-readme-action/action.yml@main
+              with :
+                environment_variable : ${{secrets.GITHUB_TOKEN}} 
