--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Install Node on image machine
-              run : npm ci 
+              run : npm install node 
             - name : Initalize my build action
               uses : ./.github/git-readme-action/action.yml@main
               with :
