Correct the checkout action usage code

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,7 +33,10 @@ jobs:
             - name: Install Node on image machine
               run : npm install node@latest
             - name : Checkout my repository
-              run : actions/checkout@v4
+              uses : actions/checkout@v4
+              with :
+                repository : 'github.repository'
+
             - name : Initalize my build action
               uses : ./.git-readme-action/action.yml@main
               with :
