Correct with statement of checkout actions code

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
             - name : Checkout my repository
               uses : actions/checkout@v4
               with :
-                repository : 'github.repository'
+                repository : github.repository
 
             - name : Initalize my build action
               uses : ./.git-readme-action/action.yml@main
