--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,24 @@
-name : 'Generate action for readme generation and mantainace'
-description : 'Action for updating readme using actions'
+name : 'Generate and Update README'
+description : 'Using github actions for generating and updating README.md file'
 author: 'KanishkChhajed'
-branding:
-    icon: 'book'
-    color: 'gray-dark'
+# branding:
+#     icon: 'book'
+#     color: 'gray-dark'
 
 inputs:
-  template-path:
-    description: 'Path to template file'
-    required: false
-    default: 'Readme_template.ejs'
-  output-path:
-    description: 'Path to output readme file'
-    required: false
-    default: 'README.md'
+  # template-path:
+    # description: 'Path to template file'
+    # required: false
+    # default: 'Readme_template.ejs'
+  # output-path:
+    # description: 'Path to output readme file'
+    # required: false
+    # default: 'README.md'
 
   token:
-    description: 'Environment variable to access github'
+    description: 'Github token for accessing repository contents'
     required : false
     default: ${{secrets.GITHUB_TOKEN}}
-
 
 runs:
   using: 'node20'
