Modify code pushes to v1

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,6 +40,6 @@ jobs:
                echo "Node installed successfully" 
             
             - name : Initalize my build action
-              uses : KanishkChhajed/git-readme-action@v1
+              uses : KanishkChhajed/git-readme-action@main
               with:
                 token:${{secrets.GITHUB_TOKEN}}
