--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ name: 'Dynamic README Updater'
 description: 'Generates README.md with live GitHub stats'
 author: 'Your Name'
 branding:
-  icon: 'book'
+  icon: 'rss'
   color: 'blue'
 
 inputs:
