--- a/action.yml
+++ b/action.yml
@@ -16,8 +16,8 @@ inputs:
 
   token:
     description: 'Github token for accessing repository contents'
-    required : false
-    default : github.token
+    required : true
+    default : ${{github.token}}
 
 runs:
   using: 'node20'
