--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,9 +37,13 @@ jobs:
               run : |
                npm install -y
                npm install @actions/core
+               echo "@actions/core installed successfully" 
                npm install octokit
+               echo "octokit installed successfully" 
                npm install @actions/github
+               echo "@actions/github installed successfully" 
                npm install @octokit/action
+               echo "@octokit/action installed successfully" 
                echo "Node installed successfully" 
             
             - name : Initalize my build action
