--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,7 @@ jobs:
     #              echo "Hello World!!!"
     #             #  echo $GITHUB_CONTEXT
 
-    second_job:
+    generate_readme:
         runs-on: ubuntu-latest
         steps:
             - name : Checkout my repository
@@ -36,13 +36,13 @@ jobs:
             - name: Install Node on image machine
               run : |
                npm install -y
-               npm install @actions/core
-               echo "@actions/core installed successfully" 
-               npm install octokit
-               echo "octokit installed successfully" 
-               npm install @actions/github
-               echo "@actions/github installed successfully" 
                echo "Node installed successfully" 
+            #    npm install @actions/core
+            #    echo "@actions/core installed successfully" 
+            #    npm install octokit
+            #    echo "octokit installed successfully" 
+            #    npm install @actions/github
+            #    echo "@actions/github installed successfully" 
             
             - name : Initalize my build action
               uses : KanishkChhajed/git-readme-action@main
