--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,8 +14,8 @@ permissions:
     contents: write
     # models: read
 
-env:
-    SECRET: ${{secrets.GITHUB_TOKEN}}
+# env:
+    # SECRET: ${{secrets.GITHUB_TOKEN}}
     # GITHUB_CONTEXT: ${{ toJson(github) }}
 
 jobs:
