--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@actions/github": "^6.0.0",
     "ejs": "^3.1.10",
     "fs": "^0.0.1-security",
-    "octokit": "^4.1.3"
+    "js-yaml": "^4.1.0",
+    "octokit": "^4.1.3",
+    "toml": "^3.0.0"
   }
 }
