--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "octokit": "^4.1.3",
+    "path": "^0.12.7",
     "toml": "^3.0.0"
   }
 }
