Changing type:CommonJS -> module in main.js,isJavaScript.js and package.json file

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "<h1 align=\"center\">\r     <img src=\"https://img.shields.io/badge/git-readme-action-🎯-blueviolet?style=for-the-badge\" alt=\"Repo Badge\">\r   </h1>",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
