--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "^4.1.0",
     "octokit": "^4.1.3",
     "path": "^0.12.7",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "xml2js": "^0.6.2"
   }
 }
