Replacing npm ci -> nom install -y in test.yaml

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install 
+          npm init -y 
           echo "Node installed successfully"
 
       - name: Initialize my build action
