--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "js-yaml": "^4.1.0",
     "octokit": "^4.1.3",
     "path": "^0.12.7",
-    "toml": "^3.0.0",
-    "xml2js": "^0.6.2"
+    "toml": "^3.0.0"
   }
 }
