--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "octokit": "^4.1.3",
     "path": "^0.12.7",
     "toml": "^3.0.0"
+  },
+  "devDependencies": {
+    "jake": "^10.9.2"
   }
 }
