--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install --ignore-scripts
+          npm install 
           echo "Node installed successfully"
 
       - name: Initialize my build action
