Replacing npm init -y -> npm ci

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm init -y
+          npm ci
           echo "Node installed successfully"
 
       - name: Initialize my build action
